--- a/package.json
+++ b/package.json
@@ -11,27 +11,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~18.2.13",
-    "@angular/common": "~18.2.13",
-    "@angular/compiler": "~18.2.13",
-    "@angular/core": "~18.2.13",
-    "@angular/forms": "~18.2.13",
-    "@angular/localize": "~18.2.13",
-    "@angular/platform-browser": "~18.2.13",
-    "@angular/platform-browser-dynamic": "~18.2.13",
-    "@angular/router": "~18.2.13",
-    "@ng-bootstrap/ng-bootstrap": "^9.1.1",
-    "bootstrap": "^4.5.0",
+    "@angular/animations": "~19.0.3",
+    "@angular/common": "~19.0.3",
+    "@angular/compiler": "~19.0.3",
+    "@angular/core": "~19.0.3",
+    "@angular/forms": "~19.0.3",
+    "@angular/localize": "~19.0.3",
+    "@angular/platform-browser": "~19.0.3",
+    "@angular/platform-browser-dynamic": "~19.0.3",
+    "@angular/router": "~19.0.3",
+    "marked": "^15.0.3",
     "ngx-build-plus": "^18.0.0",
-    "ngx-markdown": "^11.1.3",
+    "ngx-markdown": "^19.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^11.1.1",
     "@angular-devkit/build-angular": "~18.2.12",
-    "@angular/compiler-cli": "~18.2.13",
+    "@angular/compiler-cli": "~19.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
