--- a/package.json
+++ b/package.json
@@ -11,31 +11,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~19.0.3",
-    "@angular/common": "~19.0.3",
-    "@angular/compiler": "~19.0.3",
-    "@angular/core": "~19.0.3",
-    "@angular/forms": "~19.0.3",
-    "@angular/localize": "~19.0.3",
-    "@angular/platform-browser": "~19.0.3",
-    "@angular/platform-browser-dynamic": "~19.0.3",
-    "@angular/router": "~19.0.3",
-    "marked": "^15.0.3",
+    "@angular/animations": "~17.0.9",
+    "@angular/common": "~17.0.9",
+    "@angular/compiler": "~17.0.9",
+    "@angular/core": "~17.0.9",
+    "@angular/forms": "~17.0.9",
+    "@angular/localize": "~17.0.9",
+    "@angular/platform-browser": "~17.0.9",
+    "@angular/platform-browser-dynamic": "~17.0.9",
+    "@angular/router": "~17.0.9",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "bootstrap": "^5.3.3",
+    "marked": "^12.0.2",
     "ngx-build-plus": "^18.0.0",
-    "ngx-markdown": "^19.0.0",
+    "ngx-markdown": "^17.2.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.14.0"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^11.1.1",
-    "@angular-devkit/build-angular": "~18.2.12",
-    "@angular/compiler-cli": "~19.0.3",
+    "@angular-devkit/build-angular": "~17.0.9",
+    "@angular/compiler-cli": "~17.0.9",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.7.1",
-    "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
@@ -43,7 +43,6 @@
     "karma-jasmine-html-reporter": "^1.6.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~5.5.4"
+    "tslint": "~6.1.0"
   }
 }
