- Updates blog listing to read json modified dates from directory listing dates (e.g. from sn_httpd). - Adds loading spinner when opening new page, so the user knows something is happening. - Adds MP4 video support in markdown image tags. Creates a video tag in HTML. - Adds links to headings on blog listing page. - Sorts articles from most recent to oldest on blog listing page. - Improvements to link styling.

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "marked": "^12.0.2",
     "ngx-build-plus": "^18.0.0",
     "ngx-markdown": "^17.2.1",
+    "ngx-spinner": "^17.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.14.0"
