--- a/angular.json
+++ b/angular.json
@@ -28,11 +28,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
             ],
             "scripts": [
               "node_modules/marked/lib/marked.esm.js"
-            ]
+            ],
+            "baseHref": "/imim/"
           },
           "configurations": {
             "production": {
@@ -94,7 +96,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
             ],
             "scripts": []
           }
