- Updates angular.json to expect root directory deploy. - Adds MP3 control support.

--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,7 @@
             "scripts": [
               "node_modules/marked/lib/marked.esm.js"
             ],
-            "baseHref": "/imim/"
+            "baseHref": "/"
           },
           "configurations": {
             "production": {
