--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config src/proxy.conf.json",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~17.0.9",
     "@angular/router": "~17.0.9",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "angular-markdown-editor": "^3.1.1",
     "bootstrap": "^5.3.3",
     "marked": "^12.0.2",
     "ngx-build-plus": "^18.0.0",
