--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^11.1.1",
-    "@angular-devkit/build-angular": "~17.0.9",
+    "@angular-devkit/build-angular": "^19.2.14",
     "@angular/compiler-cli": "~18.2.13",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
