- adds publishing tab to allow article and blog creation with no CLI interactions. - integrates quill editor into article publish page - adds support to create new blogs and add articles to existing blogs - updates existing blog pointer or register if it already exists - adds a pointer to the latest blog if it doesn't exist and links both mutable and immutable links in status (on success). - adds inline image support to articles - adds support for linked videos being embedded in articles - changes the blog home page to hide article data beyond the CSS box, so inline images can still render, without hitting length limits. Downside is more data downloaded on first blog home page view, but can be tempered with a dynamic loader in the future.

--- a/package.json
+++ b/package.json
@@ -26,11 +26,16 @@
     "@angular/router": "~19.2.14",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "bootstrap": "^5.3.3",
+    "highlight.js": "^11.11.1",
     "marked": "^15.0.12",
     "ngx-build-plus": "^19.0.0",
     "ngx-markdown": "^19.1.1",
+    "ngx-quill": "^27.1.2",
     "ngx-spinner": "^17.0.0",
-    "rxjs": "~6.6.0",
+    "quill": "^2.0.3",
+    "quilljs-markdown": "^1.2.0",
+    "rxjs": "^7.8.2",
+    "turndown": "^7.2.0",
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
