--- a/angular.json
+++ b/angular.json
@@ -29,10 +29,16 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/ngx-spinner/animations/ball-scale-multiple.css"
+              "node_modules/ngx-spinner/animations/ball-scale-multiple.css",
+              "node_modules/quill/dist/quill.snow.css",
+              "node_modules/quill/dist/quill.core.css",
+              "node_modules/quilljs-markdown/dist/quilljs-markdown-common-style.css"
             ],
             "scripts": [
-              "node_modules/marked/lib/marked.esm.js"
+              "node_modules/marked/lib/marked.esm.js",
+              "node_modules/quill/dist/quill.core.js",
+              "node_modules/quilljs-markdown/index.js",
+              "node_modules/turndown/dist/turndown.js"
             ],
             "baseHref": "/"
           },
@@ -69,7 +75,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "buildTarget": "i-am-immutable-client:build"
+            "buildTarget": "i-am-immutable-client:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
